--- a/SOFTWARE ENGINEERING MICRO PROJECT/Source Code/Main file/ONLINE GYM TRAINING SYSTEM.html
+++ b/SOFTWARE ENGINEERING MICRO PROJECT/Source Code/Main file/ONLINE GYM TRAINING SYSTEM.html
@@ -112,8 +112,7 @@
 
         <div style="display: flex; justify-content: center;">
             <video autoplay loop muted playsinline style="width: 100%; max-width: 800px; height: auto;">
-                <source
-                    src="https://github.com/Daksh-M-Coder/SEN-MICRO-PROJECT/raw/main/WhatsApp%20Video%202024-01-14%20at%2016.26.12_fcfb4bfc.mp4"
+                <source src="https://github.com/Daksh-M-Coder/SEN-MICRO-PROJECT/raw/main/Resources/Overlook.mp4"
                     type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -481,8 +480,8 @@
             Your browser does not support the video tag.
         </video> -->
         <div style="display: flex; justify-content: center;">
-            <img src="https://github.com/Daksh-M-Coder/SEN-MICRO-PROJECT/raw/main/WhatsApp%20Image%202024-01-14%20at%2017.49.01_c162f063.jpg"
-                alt="Day 1 Image" style="width: 100%; max-width: 800px; height: auto;">
+            <img src="https://github.com/Daksh-M-Coder/SEN-MICRO-PROJECT/blob/main/Resources/Equipments.jpg" alt=""
+                style="width: 100%; max-width: 800px; height: auto;">
         </div>
 
     </main>
