--- a/Source-Code/Main-file/Stage1.html
+++ b/Source-Code/Main-file/Stage1.html
@@ -129,16 +129,17 @@
                 // Path to the HTML file within the repository
                 var filePath = 'SOFTWARE%20ENGINEERING%20MICRO%20PROJECT/Source%20Code/Main%20file/Stage%202.html';
 
-                // Construct the raw.githubusercontent.com link
-                var rawLink = 'https://raw.githubusercontent.com/Daksh-M-Coder/SEN-MICRO-PROJECT/main/' + filePath;
+                // Construct the GitHub Pages link
+                var pagesLink = 'https://daksh-m-coder.github.io/SEN-MICRO-PROJECT/' + filePath;
 
                 // Open the link in a new tab
-                window.open(rawLink, '_blank');
+                window.open(pagesLink, '_blank');
             }
 
             // Attach the function to the button click event
             document.getElementById('startExercise').addEventListener('click', loadExercisePage);
         </script>
+
 
     </main>
 
